--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -14,11 +14,10 @@
         <p>A little demo using Pion and FFmpeg</p>
       </section>
       <section class="video-container">
-        <audio id="remote-audio" autoplay muted></audio>
-        <video id="remote-video" autoplay></audio>
+        <video id="remote-video" autoplay muted></audio>
       </section>
       <section>
-        <button id="start">Start</button>
+        <button id="mute-toggle" class="button">Un-mute</button>
       </section>
     </main>
     <script>{{ .Js }}</script>
