--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-textarea {
-  width: 500px;
-  min-height: 75px;
-}
-
 body {
   background-color: #494949;
   color: #ffffff;
@@ -13,7 +8,7 @@ body {
 
 main {
   min-height: 100vh;
-  max-width: 80rem;
+  max-width: 100rem;
   margin: 1rem auto;
   text-align: center;
 }
@@ -27,4 +22,13 @@ main {
 
 #remote-video {
   width: 100%;
+}
+
+.button {
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+  background-color: #0e3e8b;
+  padding: 0.75rem;
+  border-radius: 0.25rem;
 }
